fix qr editor height on narrow

--- a/public/scripts/extensions/quick-reply/style.less
+++ b/public/scripts/extensions/quick-reply/style.less
@@ -255,6 +255,7 @@
 		}
 		> #qr--main > .qr--modal-messageContainer > #qr--modal-messageHolder {
 			min-height: 50svh;
+			height: 50svh;
 		}
 	}
 }
